@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * The event_based_risk calculator infers the minimum intensity of the GMFs
+    from the vulnerability functions (if not specified in the job.ini)
   * Added a view displaying the calculation times by source typology
   * Fixed the test of GMPETable after the correction in hazardlib
   * Optimized the saving of the asset loss table
